@@ -1,14 +1,18 @@
 ### 🖥️ Node Analysis: ip-192-168-27-123.ec2.internal
 
-#### Node Capacity & Conditions
-- **CPU**: 4 cores
-- **Memory**: 15.8 GiB
-- **Allocatable CPU**: 3920m
-- **Allocatable Memory**: 14.8 GiB
-- **Conditions**: No memory, disk, or PID pressure. Node is ready.
+#### Node Capacity & Allocatable Resources
+- **CPU**: 4 cores (Allocatable: 3920m)
+- **Memory**: 15.1 GiB (Allocatable: 14.2 GiB)
+- **Ephemeral Storage**: 80 GiB (Allocatable: 71 GiB)
+- **Pods**: 58
 
-#### Cloud Provider & Instance Type
-- **Provider**: AWS
+#### Node Conditions
+- **MemoryPressure**: False (Sufficient memory available)
+- **DiskPressure**: False (No disk pressure)
+- **PIDPressure**: False (Sufficient PID available)
+- **Ready**: True (Node is ready)
+
+#### Cloud Provider Details
 - **Instance Type**: m5.xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1b
@@ -16,72 +20,74 @@
 #### Resource Allocation & Utilization
 - **CPU Requests**: 180m (4% of allocatable)
 - **Memory Requests**: 120Mi (0% of allocatable)
-- **No OOM events**: System and Kubernetes OOM events are absent.
+- **Memory Limits**: 768Mi (5% of allocatable)
 
-#### Recommendations for Node-Level Optimizations
-1. **Resource Requests**: Increase resource requests for critical pods to ensure they have guaranteed resources.
-2. **Monitoring**: Implement monitoring for CPU and memory usage to optimize resource allocation.
-3. **Scaling**: Consider auto-scaling based on load to optimize resource utilization.
-
----
+#### Node-Level Issues or Warnings
+- No OOMKill events or system warnings detected.
 
 ### 🧵 Pod Analysis: avs-app-aerospike-vector-search-2
 
-#### Configuration Review: `aerospike-vector-search.yml`
-- **Node Roles**: Correctly set to `query`.
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
-- **Listener Addresses**: Correctly set to `0.0.0.0` for interconnect.
-- **Interconnect Settings**: Port `5001` is open and configured.
+#### Aerospike Vector Search Configuration
+- **Node Roles**: `query`
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Listener Addresses**: Configured to listen on all interfaces (0.0.0.0).
+- **Interconnect Ports**: Port 5001 is configured.
 
 #### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to JVM.
-  - **Maximum Heap Size (-Xmx)**: 12,419m
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12,419m
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240m
-  - **Code Heap Sizes**:
-    - NonNMethod: 5.8m
-    - NonProfiled: 122.9m
-    - Profiled: 122.9m
+  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to 241MB.
+  - **Maximum Heap Size (-Xmx)**: 12.1 GiB
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12.1 GiB
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MB
+  - **Code Heap Sizes**: NonNMethod: 5.8MB, NonProfiled: 122MB, Profiled: 122MB
 
 - **GC Settings**:
-  - **GC Type**: ZGC (`-XX:+UseZGC`)
-  - **GC Thread Counts**: Young and Old GC threads set to 1
-  - **GC-specific Flags**: `-XX:+ZGenerational`
+  - **GC Type**: ZGC
+  - **GC Thread Counts**: Young: 1, Old: 1
+  - **GC-specific Flags**: ZGenerational enabled
 
 - **Other Important Flags**:
-  - **NUMA Settings**: Disabled (`-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`)
-  - **Compressed Oops**: Disabled (`-XX:-UseCompressedOops`)
-  - **Pre-touch**: Enabled (`-XX:+AlwaysPreTouch`)
-  - **Compiler Settings**: `-XX:CICompilerCount=3`
-  - **Exit on OOM**: Enabled (`-XX:+ExitOnOutOfMemoryError`)
+  - **NUMA Settings**: Not used
+  - **Compressed Oops**: Disabled
+  - **Pre-touch Settings**: Enabled
+  - **Compiler Settings**: CICompilerCount set to 3
+  - **Exit on OOM**: Enabled
 
 - **Module and Package Settings**:
-  - **Added Modules**: `jdk.incubator.vector`
-  - **Opened Packages**: Several packages opened for unnamed modules.
-  - **Exported Packages**: Multiple packages exported.
+  - **Added Modules**: jdk.incubator.vector
+  - **Opened Packages**: Multiple packages opened for internal access
+  - **Exported Packages**: Several packages exported for use
 
 #### GC.heap_info Analysis
-- **Current Heap Usage**: 2030M
-- **Heap Capacity**: 2030M
-- **Max Capacity**: 12,420M
-- **Metaspace Usage**: 77,249K
-- **Class Space Usage**: 8,479K
+- **Current Heap Usage**: 2010M
+- **Heap Capacity**: 2010M
+- **Max Capacity**: 12420M
+- **Metaspace Usage**: 77.5MB
+- **Class Space Usage**: 8.5MB
 
-#### Recommendations for Pod-Level Configurations
-1. **JVM Memory Settings**: Ensure initial heap size is set to avoid dynamic allocation overhead.
-2. **GC Threads**: Consider increasing GC threads if CPU resources allow, to improve garbage collection efficiency.
-3. **NUMA Settings**: Evaluate enabling NUMA if running on NUMA architecture for potential performance gains.
-4. **Compressed Oops**: Consider enabling if memory savings are needed and performance impact is minimal.
+#### Configuration Logs
+- No failed config-injection logs detected.
 
-#### Performance Improvements
-1. **JVM Tuning**: Fine-tune JVM settings based on application profiling to optimize performance.
-2. **Resource Requests**: Set appropriate CPU and memory requests to prevent resource contention.
-3. **Monitoring**: Implement detailed monitoring for JVM metrics to proactively manage performance.
+### Recommendations
 
----
+1. **Node-Level Optimizations**:
+   - Consider increasing CPU requests for the AVS pod to ensure it has dedicated resources, especially under load.
+   - Monitor memory usage closely, as the current configuration is underutilizing available memory.
 
-### 📈 Summary
-- **Node**: Efficiently managed, but resource requests can be optimized.
-- **Pod**: Well-configured, but JVM settings can be further tuned for performance.
-- **Overall**: Implement monitoring and consider scaling strategies to optimize resource utilization and performance.
+2. **Pod-Level Configurations**:
+   - Ensure the listener addresses are correctly configured for your network setup. Listening on all interfaces is generally fine but can be restricted for security.
+   - Validate the heartbeat seeds to ensure they are reachable and correct.
+
+3. **Resource Allocation Adjustments**:
+   - Adjust memory requests and limits to better reflect actual usage and to prevent potential OOM issues.
+   - Consider setting CPU limits to prevent resource contention.
+
+4. **Performance Improvements**:
+   - Review the JVM's GC configuration to ensure it aligns with your application's performance requirements. ZGC is suitable for low-latency applications but monitor its performance.
+   - Increase the number of GC threads if the application experiences long GC pauses.
+
+5. **JVM Memory Settings**:
+   - Consider explicitly setting the initial heap size (-Xms) to match the maximum heap size (-Xmx) to reduce heap resizing overhead.
+   - Enable compressed oops if possible to reduce memory footprint, unless there's a specific reason for it being disabled.
+
+By addressing these recommendations, you can optimize both node and pod performance, ensuring efficient resource utilization and stability. 🚀
