@@ -1,88 +1,92 @@
-### 📊 Node Analysis: ip-192-168-52-147.ec2.internal
+### 🚀 Node Analysis: ip-192-168-52-147.ec2.internal
 
-#### 🖥️ Node Capacity and Conditions
-- **Instance Type**: `r5.2xlarge` (8 vCPUs, 64 GiB RAM)
-- **Region/Zone**: `us-east-1` / `us-east-1d`
-- **Capacity**:
-  - CPU: 8 cores
-  - Memory: ~62 GiB
-  - Pods: 58
-- **Allocatable Resources**:
+#### 🖥️ Node Capacity & Conditions
+- **Instance Type**: `r5.2xlarge` (Cloud Provider: AWS)
+- **CPU**: 8 cores
+- **Memory**: 62 GB
+- **Allocatable Resources**: 
   - CPU: 7910m
-  - Memory: ~61 GiB
-- **Node Conditions**: All conditions are healthy (No Memory, Disk, or PID pressure).
+  - Memory: 61 GB
+- **Node Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
 #### 🏷️ Cloud Provider Details
-- **Provider**: AWS
-- **Instance ID**: `i-00c6a97714db38acc`
-- **Node Group**: `avs-standalone-pool`
+- **Region**: `us-east-1`
+- **Zone**: `us-east-1d`
+- **Instance Type**: `r5.2xlarge`
 
-#### 📊 Resource Allocation and Utilization
+#### 📊 Resource Allocation & Utilization
 - **CPU Requests**: 230m (2%)
-- **Memory Requests**: 724Mi (1%)
 - **CPU Limits**: 400m (5%)
+- **Memory Requests**: 724Mi (1%)
 - **Memory Limits**: 1280Mi (2%)
 
 #### 🔍 Node-Level Issues
-- **No OOM Events**: No system or Kubernetes OOM events detected.
-- **Resource Utilization**: Very low resource utilization, indicating potential over-provisioning.
+- No OOMKill events found.
+- No significant node-level warnings or issues detected.
 
-### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
+### 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-0
 
-#### 📄 Configuration Validation
-- **Node Roles**: Correctly set to `standalone-indexer`.
-- **Heartbeat Seeds**: Configured with two seeds, which is optimal for redundancy.
-- **Listener Addresses**: Properly set to `0.0.0.0` for interconnect.
-- **Interconnect Settings**: Port `5001` is correctly configured.
+#### 📄 Configuration Review: aerospike-vector-search.yml
+- **Cluster Name**: `avs-db-1`
+- **Node Roles**: `standalone-indexer`
+- **Heartbeat Seeds**: Correctly configured with multiple seeds.
+- **Listener Addresses**: Configured to `0.0.0.0` for interconnect.
+- **Advertised Listeners**: Correctly set to external IP `3.238.188.22`.
 
 #### 📦 JVM Configuration
 - **Memory Settings**:
-  - Initial Heap Size (`-Xms`): Not explicitly set, defaults to system.
-  - Maximum Heap Size (`-Xmx`): 50799m (~50 GiB)
-  - Soft Max Heap Size (`-XX:SoftMaxHeapSize`): 50799m
-  - Reserved Code Cache Size (`-XX:ReservedCodeCacheSize`): 240 MiB
-  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled are adequately set.
+  - Initial Heap Size: `1027604480` bytes (~980MB)
+  - Maximum Heap Size: `53267660800` bytes (~50GB)
+  - Soft Max Heap Size: `53267660800` bytes (~50GB)
+  - Reserved Code Cache Size: `251658240` bytes (~240MB)
+  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately.
+
 - **GC Settings**:
-  - GC Type: `-XX:+UseZGC` with `-XX:+ZGenerational`
-  - GC Threads: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
+  - GC Type: `UseZGC`
+  - GC Thread Counts: `ZYoungGCThreads=2`, `ZOldGCThreads=2`
+  - GC-specific Flags: `ZGenerational`
+
 - **Other Important Flags**:
-  - NUMA: Disabled (`-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`)
-  - Compressed Oops: Not explicitly disabled, likely enabled.
-  - Pre-touch: Enabled (`-XX:+AlwaysPreTouch`)
-  - Compiler Threads: 4 (`-XX:CICompilerCount=4`)
-  - Exit on OOM: Enabled (`-XX:+ExitOnOutOfMemoryError`)
+  - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`
+  - Compressed oops: Not used
+  - Pre-touch settings: `-XX:+AlwaysPreTouch`
+  - Compiler settings: `-XX:CICompilerCount=4`
+  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError`
+
 - **Module and Package Settings**:
   - Added Modules: `jdk.incubator.vector`
-  - Opened Packages: Multiple packages opened for unnamed modules.
+  - Opened Packages: Multiple packages opened for `ALL-UNNAMED`
+  - Exported Packages: Various internal packages exported.
 
 #### 📈 GC.heap_info Analysis
-- **Current Heap Usage**: 8898M
-- **Heap Capacity**: 8898M
+- **Current Heap Usage**: 21662M
+- **Heap Capacity**: 49440M
 - **Max Capacity**: 50800M
-- **Metaspace Usage**: 79M
-- **Class Space Usage**: 8.7M
+- **Metaspace Usage**: 80347K
+- **Class Space Usage**: 8783K
 
-#### 🛠️ Config-Injection Logs
-- **No Failed Config-Injection Logs**: All configurations were successfully applied.
+#### 🛠️ Failed Config-Injection Logs
+- No failed config-injection logs detected.
 
-### 📝 Recommendations
+### 📌 Recommendations
 
-#### 1. Node-Level Optimizations
-- **Resource Utilization**: Consider resizing the instance type or consolidating workloads to better utilize resources.
+1. **Node-Level Optimizations**:
+   - Ensure that the node is not overcommitted in terms of CPU and memory. Current utilization is low, allowing for potential scaling of workloads.
 
-#### 2. Pod-Level Configurations
-- **Heartbeat Seeds**: Ensure all seeds are consistently reachable to maintain cluster health.
-- **Listener Configuration**: Verify that all advertised listeners are correctly set for external access.
+2. **Pod-Level Configurations**:
+   - The pod configuration seems optimal with appropriate node roles and heartbeat seeds. Ensure that the advertised listener IP is correct and accessible.
 
-#### 3. Resource Allocation Adjustments
-- **CPU and Memory Requests**: Increase requests to better reflect actual usage and avoid potential throttling.
+3. **Resource Allocation Adjustments**:
+   - Consider setting explicit resource requests and limits for the AVS pod to ensure predictable performance and avoid resource contention.
 
-#### 4. Performance Improvements
-- **JVM Heap Management**: Adjust the initial heap size (`-Xms`) to reduce potential startup delays.
-- **GC Threads**: Evaluate increasing GC threads if garbage collection becomes a bottleneck.
+4. **Performance Improvements**:
+   - Monitor the GC performance and adjust the ZGC thread counts if necessary to optimize garbage collection times.
 
-#### 5. JVM Memory Settings
-- **Heap Size**: Ensure the max heap size (`-Xmx`) does not exceed available memory to prevent OOM.
-- **Code Cache**: Monitor code cache usage and adjust if necessary to avoid compilation delays.
+5. **JVM Memory Settings**:
+   - The JVM memory settings are well-configured, but ensure that the maximum heap size does not exceed the node's available memory to prevent OOM issues.
 
-By implementing these recommendations, you can optimize the performance and resource utilization of your Aerospike Vector Search deployment. 🚀
+By following these recommendations, you can optimize the performance and reliability of the Aerospike Vector Search deployment on this Kubernetes node. 🌟
